Add outline summaries and mind map trees for value creation articles

--- a/pages/writing-opinion/values-creation/2-why-we-must-create-value-vn.html
+++ b/pages/writing-opinion/values-creation/2-why-we-must-create-value-vn.html
@@ -71,6 +71,67 @@
             <p>Trước khi học cách tạo ra giá trị, điều quan trọng hơn là hiểu vì sao ta phải làm điều đó. Khi “tại sao” trở nên rõ ràng, “làm thế nào” không còn là gánh nặng. Tạo ra giá trị, vì thế, không chỉ là một kỹ năng có thể học, mà là một cách sống—một cách để con người đặt mình vào đời sống một cách có chủ ý, thay vì trôi theo quán tính. Sau cùng, giá trị của một con người không nằm ở những gì họ nắm giữ, mà ở những gì họ để lại thông qua giá trị họ tạo ra.</p>
             <p>Tuy nhiên, điều đó không có nghĩa rằng mỗi người đều phải tạo ra những giá trị lớn lao hay được xã hội ca ngợi. Chúng ta tạo ra giá trị không phải để trở nên vĩ đại, mà để đời sống của mình không trôi dạt. Giá trị cũng không được đo bằng tiền bạc hay địa vị: người giàu không mặc nhiên có nhiều giá trị hơn người nghèo, và người ở vị trí cao không tự động tạo ra giá trị lớn hơn người ở vị trí thấp. Điều quyết định nằm ở mục tiêu giá trị mà mỗi người lựa chọn, và ở mức độ họ sống thật với giá trị đó. Khi một con người tạo ra giá trị phù hợp với con đường của mình, sự tồn tại của họ có điểm tựa—và chính điểm tựa ấy là lý do sâu xa khiến việc tạo ra giá trị trở thành điều không thể né tránh.</p>
         </div>
+
+        <!-- Outline summary notes -->
+        <div class="sub-section">
+            <h3 class="sub-point-1">Ghi chú tóm tắt (outline)</h3>
+            <ul>
+                <li>Giá trị là nền móng tạo nên ý nghĩa đời sống; giá trị nằm ở điều ta chuyển hóa thành lợi ích.</li>
+                <li>Ý nghĩa không phải để tìm, mà được tạo ra khi ta đóng góp và làm tốt hơn hiện trạng.</li>
+                <li>Giá trị không cần phô trương; hành động đúng có thể lặng lẽ nhưng bền bỉ.</li>
+                <li>Con người chủ động tạo ý nghĩa đời sống (Disraeli, Nguyễn Hiến Lê).</li>
+                <li>Giá trị hình thành qua hành động cụ thể và tác động đến người khác.</li>
+                <li>Forrest Gump: hành động giản dị tạo giá trị; thành công là hệ quả tự nhiên; giá trị lớn nhất là gia đình và ảnh hưởng.</li>
+                <li>Tri thức/tư tưởng chỉ có ý nghĩa khi được đưa vào hành động; xã hội vận hành bằng trao đổi giá trị.</li>
+                <li>Tạo giá trị là cách sống có chủ ý; không đo bằng tiền/địa vị mà bằng mục tiêu và mức độ sống đúng giá trị đó.</li>
+            </ul>
+        </div>
+
+        <!-- Text Mind Map Tree -->
+        <div class="sub-section">
+            <details class="mm-text-tree-details">
+                <summary class="sub-point-1">Mind map dạng chữ (tree)</summary>
+                <pre class="mm-text-tree">
+2. TẠI SAO CHÚNG TA PHẢI TẠO RA GIÁ TRỊ
+├─ Luận điểm trung tâm
+│  └─ Ý nghĩa được tạo nên khi ta tạo ra giá trị cho bản thân và người khác
+│
+├─ 1) Giá trị như nền móng của ý nghĩa đời sống
+│  ├─ Con người có giá trị khi tạo ra giá trị
+│  ├─ Ý nghĩa vượt ra ngoài bản thân
+│  └─ Giá trị nằm ở chuyển hóa nguồn lực thành lợi ích
+│
+├─ 2) Ý nghĩa không phải để tìm, mà để tạo
+│  ├─ Ý nghĩa xuất hiện khi đóng góp và giải quyết vấn đề
+│  └─ Không tạo giá trị → dễ mất phương hướng
+│
+├─ 3) Giá trị không nhất thiết phải được nhìn thấy
+│  ├─ Vô vi: hành động đúng không phô trương, bền bỉ
+│  ├─ Disraeli: con người tạo hoàn cảnh
+│  └─ Nguyễn Hiến Lê: đời sống cần được tự tạo ý nghĩa
+│
+├─ 4) Giá trị được hình thành qua hành động cụ thể
+│  ├─ Giáo viên, nghệ sĩ tạo giá trị qua tác động đến người khác
+│  └─ Ý nghĩa hiện rõ trong đời sống bình dị
+│
+├─ 5) Forrest Gump - giá trị đến từ hành động
+│  ├─ Không theo triết lý cao siêu, vẫn tạo giá trị liên tục
+│  ├─ Thành công vật chất là hệ quả tự nhiên
+│  └─ Giá trị lớn nhất: gia đình và ảnh hưởng bền bỉ
+│
+├─ 6) Giá trị trong tri thức, tư tưởng và xã hội
+│  ├─ Tri thức cần hành động để trở thành giá trị
+│  ├─ Hệ tư tưởng sống nhờ thực hành
+│  ├─ Xã hội vận hành bằng trao đổi giá trị
+│  └─ Công việc trả lương cho kết quả được hiện thực hóa
+│
+└─ 7) Vì sao tạo ra giá trị là điều không thể né tránh
+   ├─ Hiểu “tại sao” giúp “làm thế nào” trở nên rõ ràng
+   ├─ Tạo giá trị là cách sống có chủ ý, không trôi dạt
+   └─ Giá trị không đo bằng tiền/địa vị, mà bằng mục tiêu và mức độ sống thật với nó
+                </pre>
+            </details>
+        </div>
 	</section>
 </article>
 <script src="settings.js"></script>
