--- a/pages/writing-opinion/values-creation/2-why-we-must-create-value.html
+++ b/pages/writing-opinion/values-creation/2-why-we-must-create-value.html
@@ -65,6 +65,67 @@
                 <p>Before learning how to create value, it is even more important to understand why we must do so. When the “why” becomes clear, the “how” is no longer a burden. Creating value, therefore, is not just a skill to learn, but a way of living—a way for people to place themselves in life intentionally rather than drifting by inertia. In the end, a person’s worth is not in what they hold, but in what they leave behind through the value they create.</p>
                 <p>However, that does not mean everyone must create grand values or be praised by society. We create value not to become great, but so that our lives do not drift. Value is also not measured by money or position: the rich do not automatically have more value than the poor, and those in higher positions do not necessarily create greater value than those in lower positions. What matters lies in the value goal each person chooses, and the extent to which they live truthfully with that value. When someone creates value aligned with their own path, their existence has an anchor—and that anchor is the deep reason why creating value becomes unavoidable.</p>
             </div>
+
+            <!-- Outline summary notes -->
+            <div class="sub-section">
+                <h3 class="sub-point-1">Outline summary notes</h3>
+                <ul>
+                    <li>Value is the foundation of meaning; it lies in what we transform into benefits.</li>
+                    <li>Meaning is not to be found but created through contribution and improvement.</li>
+                    <li>Value does not need to be visible; quiet, natural action can be enduring.</li>
+                    <li>Humans actively create life’s meaning (Disraeli, Nguyễn Hiến Lê).</li>
+                    <li>Value takes shape through concrete actions and their impact on others.</li>
+                    <li>Forrest Gump: simple action creates value; success is a natural consequence; the greatest value is family and influence.</li>
+                    <li>Knowledge and ideas matter only when put into action; society runs on value exchange.</li>
+                    <li>Creating value is an intentional way of living; it is not measured by money or position, but by chosen aims and fidelity to them.</li>
+                </ul>
+            </div>
+
+            <!-- Text Mind Map Tree -->
+            <div class="sub-section">
+                <details class="mm-text-tree-details">
+                    <summary class="sub-point-1">Text mind map (tree)</summary>
+                    <pre class="mm-text-tree">
+2. WHY WE MUST CREATE VALUE
+├─ Central claim
+│  └─ Meaning is created when we create value for ourselves and others
+│
+├─ 1) Value as the foundation of life’s meaning
+│  ├─ A person becomes valuable by creating value
+│  ├─ Meaning reaches beyond the self
+│  └─ Value lies in transforming resources into benefits
+│
+├─ 2) Meaning is not to be found, but to be created
+│  ├─ Meaning appears through contribution and problem-solving
+│  └─ Without value creation → life drifts and loses direction
+│
+├─ 3) Value does not necessarily need to be seen
+│  ├─ Non-action: right action is quiet yet enduring
+│  ├─ Disraeli: people create circumstances
+│  └─ Nguyễn Hiến Lê: life's meaning must be self-created
+│
+├─ 4) Value is formed through concrete action
+│  ├─ Teachers/artists create value by shaping others
+│  └─ Meaning often shows most clearly in simple lives
+│
+├─ 5) Forrest Gump — value comes from action
+│  ├─ No lofty philosophy, yet continuous value creation
+│  ├─ Material success as a natural consequence
+│  └─ Greatest value: family and enduring influence
+│
+├─ 6) Value in knowledge, thought, and society
+│  ├─ Knowledge becomes value only through action
+│  ├─ Belief systems live through practice
+│  ├─ Society runs on value exchange
+│  └─ Work rewards realized results
+│
+└─ 7) Why creating value cannot be avoided
+   ├─ Clear “why” makes the “how” lighter
+   ├─ Creating value is intentional living, not drifting
+   └─ Value is not measured by money/position, but by chosen aims and fidelity to them
+                    </pre>
+                </details>
+            </div>
         </section>
 	</article>
 
