--- a/pages/writing-opinion/values-creation/3-creating-value-through-actions-vn.html
+++ b/pages/writing-opinion/values-creation/3-creating-value-through-actions-vn.html
@@ -83,6 +83,65 @@
 			<p>Vì thế, hành động là điểm khởi đầu không thể thiếu, nhưng chưa bao giờ là điểm kết thúc. Giá trị bền vững được hình thành khi hành động gắn liền với sự hiểu biết, với khả năng nhìn xa hơn hệ quả trước mắt và chịu trách nhiệm cho những gì mình tạo ra. Chỉ trong sự kết hợp ấy, hành động mới thực sự trở thành con đường để con người kiến tạo giá trị và đặt đời sống của mình vào một quỹ đạo có ý nghĩa.</p>
 		</div>
 
+		<!-- Outline summary notes -->
+		<div class="sub-section">
+			<h3 class="sub-point-1">Ghi chú tóm tắt (outline)</h3>
+			<ul>
+				<li>Giá trị được tạo ra từ những hành động nhỏ, đều đặn và chân thật.</li>
+				<li>Ý nghĩa nằm ở cách ta nhìn công việc: “đặt gạch” hay “xây lâu đài”.</li>
+				<li>Không có chỗ cho sự đứng yên; kỷ luật hành động là điều kiện để tồn tại và duy trì giá trị.</li>
+				<li>Hành động chỉ tạo giá trị khi có trí tuệ và bối cảnh định hướng.</li>
+				<li>Khi trí tuệ kết hợp với tổ chức, giá trị có thể vượt thời gian (Newton, Kim tự tháp, Kênh đào Panama).</li>
+				<li>Trí tuệ cần đi kèm trách nhiệm; giá trị phải cân nhắc hệ quả dài hạn (ví dụ: thủy điện).</li>
+				<li>Giá trị bền vững hình thành khi hành động + trí tuệ + trách nhiệm hòa làm một.</li>
+			</ul>
+		</div>
+
+		<!-- Text Mind Map Tree -->
+		<div class="sub-section">
+			<details class="mm-text-tree-details">
+				<summary class="sub-point-1">Mind map dạng chữ (tree)</summary>
+				<pre class="mm-text-tree">
+3. TẠO RA GIÁ TRỊ QUA HÀNH ĐỘNG
+├─ Luận điểm trung tâm
+│  └─ Hành động nhỏ, đều đặn và sáng suốt tạo nên giá trị bền vững
+│
+├─ 1) Giá trị từ hành động nhỏ và đều
+│  ├─ Hình ảnh kiến/ong: tích lũy âm thầm tạo nên cấu trúc lớn
+│  ├─ Mỗi người “tha mồi” mỗi ngày → đóng góp cho toàn thể
+│  └─ Giá trị lớn hình thành từ tích lũy, không từ bước nhảy vọt
+│
+├─ 2) Ý nghĩa gắn vào hành động
+│  ├─ Câu chuyện người thợ xây: đặt gạch ↔ xây lâu đài
+│  ├─ Ý nghĩa đến từ cách nhìn công việc
+│  └─ Giá trị khởi đầu ngay từ nhận thức về điều mình đang kiến tạo
+│
+├─ 3) Không đứng yên được
+│  ├─ Tục ngữ sư tử - linh dương: mỗi sáng đều phải “chạy”
+│  ├─ Hành động lặp lại, kỷ luật là điều kiện để tồn tại
+│  └─ Ngừng hành động → giá trị và năng lực mai một
+│
+├─ 4) Hành động cần trí tuệ
+│  ├─ Giá trị phải xét trong bối cảnh
+│  ├─ Trí tuệ phân định giá trị nhất thời vs bền vững
+│  └─ Hành động thiếu trí tuệ có thể gây hại
+│
+├─ 5) Trí tuệ + tổ chức → giá trị vượt thời gian
+│  ├─ Newton và quả táo: trí tuệ biến sự kiện nhỏ thành bước ngoặt
+│  ├─ Kim tự tháp: tư duy hệ thống và tổ chức dài hạn
+│  └─ Kênh đào Panama: tích lũy tri thức, tổ chức, quyết định dài hạn
+│
+├─ 6) Trí tuệ cần đi cùng trách nhiệm
+│  ├─ Thủy điện: lợi ích ↔ tác động môi trường và xã hội
+│  └─ Giá trị phải cân nhắc hệ quả dài hạn và trách nhiệm
+│
+└─ 7) Kết luận
+   ├─ Hành động là khởi đầu, chưa phải điểm kết thúc
+   └─ Giá trị bền vững = hành động + trí tuệ + trách nhiệm
+				</pre>
+			</details>
+		</div>
+
 	</section>
 
 </article>
