--- a/pages/writing-opinion/values-creation/3-creating-value-through-actions.html
+++ b/pages/writing-opinion/values-creation/3-creating-value-through-actions.html
@@ -80,6 +80,65 @@
 				<p>Creating value does not begin with noble intentions, nor is it guaranteed by passing inspiration. Value appears only when people step into life through concrete action, repeated long enough and steadily enough. But action, if not illuminated by wisdom, can produce results contrary to what we hope.</p>
 				<p>Therefore, action is a necessary beginning, but never the end. Sustainable value is formed when action is tied to understanding, to seeing beyond immediate effects, and to bearing responsibility for what we create. Only in that union does action truly become the path by which people build value and set their lives on a meaningful trajectory.</p>
 			</div>
+
+			<!-- Outline summary notes -->
+			<div class="sub-section">
+				<h3 class="sub-point-1">Outline summary notes</h3>
+				<ul>
+					<li>Value is created through small, steady, and genuine actions.</li>
+					<li>Meaning depends on how we view our work: “laying bricks” versus “building a castle.”</li>
+					<li>There is no room for standing still; disciplined action is a condition for survival and sustaining value.</li>
+					<li>Action creates value only when guided by wisdom and context.</li>
+					<li>When wisdom combines with organization, value can outlast time (Newton, pyramids, Panama Canal).</li>
+					<li>Wisdom must be joined with responsibility; value requires long-term impact awareness (e.g., hydropower dams).</li>
+					<li>Sustainable value emerges when action, wisdom, and responsibility are integrated.</li>
+				</ul>
+			</div>
+
+			<!-- Text Mind Map Tree -->
+			<div class="sub-section">
+				<details class="mm-text-tree-details">
+					<summary class="sub-point-1">Text mind map (tree)</summary>
+					<pre class="mm-text-tree">
+3. CREATING VALUE THROUGH ACTIONS
+├─ Central claim
+│  └─ Small, steady, and wise actions build lasting value
+│
+├─ 1) Value from small, steady actions
+│  ├─ Ants/bees: quiet accumulation builds large structures
+│  ├─ Each person “carries food” daily → contributes to the whole
+│  └─ Greater value forms by accumulation, not leaps
+│
+├─ 2) Meaning attached to action
+│  ├─ Bricklayer story: laying bricks ↔ building a castle
+│  ├─ Meaning comes from how we see the work
+│  └─ Value begins with awareness of what we are building
+│
+├─ 3) Action discipline as a condition for existence
+│  ├─ Lion-gazelle proverb: every morning we must “run”
+│  ├─ Repeated, disciplined action sustains life and meaning
+│  └─ Stopping action → abilities and value fade
+│
+├─ 4) Action needs wisdom
+│  ├─ Value must be judged in context
+│  ├─ Wisdom distinguishes short-lived vs lasting value
+│  └─ Action without wisdom can cause harm
+│
+├─ 5) Wisdom + organization → value beyond time
+│  ├─ Newton's apple: wisdom turns a small event into a breakthrough
+│  ├─ Pyramids: systemic thinking and long-term organization
+│  └─ Panama Canal: accumulated knowledge, organization, long-term decisions
+│
+├─ 6) Wisdom must be joined with responsibility
+│  ├─ Hydropower: benefits ↔ social/environmental costs
+│  └─ Value requires long-horizon thinking and responsibility
+│
+└─ 7) Conclusion
+   ├─ Action is the start, not the end
+   └─ Sustainable value = action + wisdom + responsibility
+					</pre>
+				</details>
+			</div>
 		</section>
 	</article>
 
