--- a/pages/writing-opinion/values-creation/4-sustainable-ethical-value-creation-vn.html
+++ b/pages/writing-opinion/values-creation/4-sustainable-ethical-value-creation-vn.html
@@ -93,6 +93,68 @@
 			<p>Với tôi, việc tuân thủ nguyên tắc không gây tổn hại đã đủ để đặt một nền móng vững chắc. Khi giá trị được tạo ra mà không xâm phạm lợi ích của người khác, không để lại những hệ quả tiêu cực rõ ràng hay tiềm ẩn, thì giá trị ấy có khả năng tồn tại lâu dài và bền vững hơn. Chính từ nền tảng tối thiểu nhưng nhất quán này, mọi sự phát triển tiếp theo—dù ở cấp độ cá nhân hay rộng hơn—mới có thể diễn ra một cách ổn định và có ý nghĩa.</p>
 		</div>
 
+		<!-- Outline summary notes -->
+		<div class="sub-section">
+			<h3 class="sub-point-1">Ghi chú tóm tắt (outline)</h3>
+			<ul>
+				<li>Đạo đức là tiêu chí nền tảng để đánh giá giá trị, nhưng mang tính bối cảnh và lịch sử.</li>
+				<li>Nguyên tắc tối thiểu: không gây tổn hại là điểm tựa xuyên suốt.</li>
+				<li>Không thể kiểm soát người khác; đạo đức là giới hạn tự nguyện cho bản thân.</li>
+				<li>Yêu thương là lựa chọn đi xa hơn, không phải nghĩa vụ bắt buộc.</li>
+				<li>Nếu nguyên tắc tối thiểu được lan tỏa, xã hội ít xung đột và bền vững hơn.</li>
+				<li>Tổn hại có thể trực tiếp hoặc gián tiếp, ngắn hạn hoặc dài hạn.</li>
+				<li>Hệ quả bất định đòi hỏi thái độ thận trọng, khiêm tốn và sẵn sàng điều chỉnh.</li>
+				<li>Chủ ý dừng ở nguyên tắc tối thiểu để tránh hệ quả ngoài ý muốn.</li>
+				<li>Nền móng giá trị bền vững bắt đầu từ việc không xâm phạm lợi ích của người khác.</li>
+			</ul>
+		</div>
+
+		<!-- Text Mind Map Tree -->
+		<div class="sub-section">
+			<details class="mm-text-tree-details">
+				<summary class="sub-point-1">Mind map dạng chữ (tree)</summary>
+				<pre class="mm-text-tree">
+4. TẠO GIÁ TRỊ BỀN VỮNG VÀ ĐẠO ĐỨC
+├─ Luận điểm trung tâm
+│  └─ Nguyên tắc tối thiểu: không gây tổn hại
+│
+├─ 1) Đạo đức như tiêu chí nền tảng
+│  ├─ Đạo đức không bất biến, phụ thuộc bối cảnh và lịch sử
+│  └─ Quan điểm cá nhân làm thước đo tối thiểu
+│
+├─ 2) Nguyên tắc tối thiểu: không gây tổn hại
+│  ├─ Tư tưởng tương đồng (Khổng Tử, Socrates, Aristotle)
+│  └─ Điểm chung: hành động không gây hại người khác
+│
+├─ 3) Giới hạn: không thể kiểm soát người khác
+│  ├─ Mỗi người có hệ quy chiếu đạo đức khác nhau
+│  └─ Đạo đức là giới hạn tự nguyện cho bản thân
+│
+├─ 4) Lựa chọn đi xa hơn: yêu thương
+│  ├─ Thừa nhận sự vô lý của con người
+│  ├─ Yêu thương là lựa chọn, không bắt buộc
+│  └─ Giúp giữ vững nội tâm trước giới hạn đời sống
+│
+├─ 5) Khi nguyên tắc tối thiểu được lan tỏa
+│  └─ Xã hội ít xung đột, đáng tin cậy và bền vững hơn
+│
+├─ 6) Tổn hại trực tiếp và gián tiếp
+│  ├─ Trực tiếp: dễ nhận biết, hệ quả tức thời
+│  └─ Gián tiếp: âm thầm, kéo dài, khó quan sát
+│
+├─ 7) Bất định của hệ quả và thái độ đạo đức
+│  ├─ Hiệu ứng cánh bướm: hệ quả khó lường
+│  └─ Cần thận trọng, khiêm tốn và sẵn sàng điều chỉnh
+│
+├─ 8) Chủ ý dừng ở nguyên tắc tối thiểu
+│  └─ Tránh hệ quả ngoài ý muốn của việc “giúp đỡ” thiếu hiểu biết
+│
+└─ 9) Kết luận: nền móng cho giá trị bền vững
+   └─ Giá trị bền vững bắt đầu từ không xâm phạm lợi ích người khác
+				</pre>
+			</details>
+		</div>
+
 	</section>
 </article>
 <script src="settings.js"></script>
