--- a/pages/writing-opinion/values-creation/4-sustainable-ethical-value-creation.html
+++ b/pages/writing-opinion/values-creation/4-sustainable-ethical-value-creation.html
@@ -92,6 +92,67 @@
 				<p>For me, adhering to the no-harm principle is enough to set a solid foundation. When value is created without infringing on others’ interests and without leaving obvious or hidden negative consequences, that value is more likely to endure and remain sustainable. From this minimal but consistent foundation, any further development—whether at the personal level or beyond—can proceed in a more stable and meaningful way.</p>
 			</div>
 
+			<!-- Outline summary notes -->
+			<div class="sub-section">
+				<h3 class="sub-point-1">Outline summary notes</h3>
+				<ul>
+					<li>Ethics is a foundational criterion for value, but it is context- and history-dependent.</li>
+					<li>Minimum principle: do no harm as a consistent anchor.</li>
+					<li>We cannot control others; ethics is a voluntary boundary for ourselves.</li>
+					<li>Love is a further choice, not a mandatory obligation.</li>
+					<li>If the minimum principle spreads, society becomes less conflict-prone and more sustainable.</li>
+					<li>Harm can be direct or indirect, short-term or long-term.</li>
+					<li>Uncertain consequences require caution, humility, and readiness to adjust.</li>
+					<li>Intentionally stopping at the minimum avoids unintended harm from ill-considered “help.”</li>
+					<li>Sustainable value begins with not infringing on others’ interests.</li>
+				</ul>
+			</div>
+
+			<!-- Text Mind Map Tree -->
+			<div class="sub-section">
+				<details class="mm-text-tree-details">
+					<summary class="sub-point-1">Text mind map (tree)</summary>
+					<pre class="mm-text-tree">
+4. SUSTAINABLE AND ETHICAL VALUE CREATION
+├─ Central claim
+│  └─ Minimum principle: do no harm
+│
+├─ 1) Ethics as a foundational criterion
+│  ├─ Ethics is not fixed; it depends on context and history
+│  └─ A personal viewpoint serves as a minimal measure
+│
+├─ 2) Minimum principle: do no harm
+│  ├─ Parallel teachings (Confucius, Socrates, Aristotle)
+│  └─ Common point: human actions should not harm others
+│
+├─ 3) Limits: we cannot control others
+│  ├─ Different moral frames across individuals
+│  └─ Ethics as a voluntary boundary for oneself
+│
+├─ 4) A further choice: love
+│  ├─ Acknowledge human irrationality
+│  ├─ Love is optional, not required
+│  └─ Helps preserve inner stability amid life’s limits
+│
+├─ 5) When the minimum principle spreads
+│  └─ Society becomes less conflict-ridden, more trustworthy, sustainable
+│
+├─ 6) Direct and indirect harm
+│  ├─ Direct: visible, immediate impacts
+│  └─ Indirect: quiet, long-term, hard to observe
+│
+├─ 7) Uncertainty of consequences and ethical stance
+│  ├─ Butterfly effect: consequences are hard to predict
+│  └─ Requires caution, humility, and willingness to adjust
+│
+├─ 8) Intentionally stopping at the minimum principle
+│  └─ Avoid unintended harm from poorly considered “help”
+│
+└─ 9) Conclusion: a foundation for sustainable value
+   └─ Sustainable value begins with not infringing on others’ interests
+					</pre>
+				</details>
+			</div>
 		</section>
 	</article>
 
