--- a/pages/writing-opinion/values-creation/5-health-and-clarity-of-mind-vn.html
+++ b/pages/writing-opinion/values-creation/5-health-and-clarity-of-mind-vn.html
@@ -91,6 +91,65 @@
 
 			<p>Sau cùng, vấn đề không nằm ở chỗ con người thiếu giá trị hay thiếu thiện chí, mà ở chỗ họ thường đánh giá quá cao ý định của mình và đánh giá quá thấp những điều kiện cần thiết để sống trọn vẹn với ý định ấy. Khi cơ thể không đủ sức và tâm trí không đủ rõ, giá trị—dù được lựa chọn đúng—vẫn có thể bị bóp méo ngay trong chính quá trình tạo ra nó.</p>
 		</div>
+
+		<!-- Outline summary notes -->
+		<div class="sub-section">
+			<h3 class="sub-point-1">Ghi chú tóm tắt (outline)</h3>
+			<ul>
+				<li>Sức bền đến từ cân bằng giữa áp lực và phục hồi, như thanh thép được tôi luyện đúng cách.</li>
+				<li>Sức khỏe và minh mẫn là điều kiện nền giúp ý định được duy trì lâu dài.</li>
+				<li>Tính liên tục của hành động đòi hỏi nền thể chất tối thiểu.</li>
+				<li>Bài học Trung đạo: sức khỏe là nền tảng âm thầm cho sự tỉnh táo.</li>
+				<li>Trí lực giúp hành động không lệch hướng và phân biệt đúng–sai, có–không giá trị.</li>
+				<li>Trí lực còn là khả năng “không hành động” khi hành động không tạo giá trị (ví dụ Lincoln).</li>
+				<li>Nhận diện bẫy tư duy giúp rèn luyện tư duy rõ ràng và thận trọng trước khi hành động.</li>
+				<li>Khi điều kiện nền không đủ, giá trị dễ bị bóp méo dù ý định tốt.</li>
+			</ul>
+		</div>
+
+		<!-- Text Mind Map Tree -->
+		<div class="sub-section">
+			<details class="mm-text-tree-details">
+				<summary class="sub-point-1">Mind map dạng chữ (tree)</summary>
+				<pre class="mm-text-tree">
+5. SỨC KHỎE VÀ SỰ MINH MẪN CỦA TÂM TRÍ
+├─ Luận điểm trung tâm
+│  └─ Nền tảng thể chất và tinh thần quyết định khả năng tạo giá trị bền vững
+│
+├─ 1) Sức bền = cân bằng áp lực và phục hồi
+│  ├─ Ẩn dụ thanh thép: chịu lực quá mức → biến dạng/gãy
+│  └─ Tôi luyện đúng cách → bền vững dài hạn
+│
+├─ 2) Sức khỏe và minh mẫn là điều kiện nền
+│  ├─ Không trực tiếp tạo giá trị nhưng quyết định khả năng duy trì
+│  └─ Cần đủ sức và đủ tỉnh táo để hành động đúng lâu dài
+│
+├─ 3) Tính liên tục của hành động cần nền thể chất
+│  ├─ “Phải chạy” mỗi sáng → cần cơ thể đủ khỏe
+│  └─ Thiếu nền thể chất → kỷ luật trở nên mong manh
+│
+├─ 4) Bài học Trung đạo
+│  ├─ Khổ hạnh cực đoan → suy kiệt, mất tỉnh táo
+│  ├─ Dinh dưỡng phục hồi → nhận ra Trung đạo
+│  └─ Sức khỏe là nền tảng âm thầm của tỉnh thức
+│
+├─ 5) Trí lực giữ hành động không lệch hướng
+│  ├─ Phân biệt đúng/sai, có/không giá trị
+│  └─ Minh mẫn giúp quyết định có trách nhiệm
+│
+├─ 6) Trí lực = khả năng không hành động khi cần
+│  ├─ Lincoln không gửi thư chỉ trích
+│  └─ Kiềm chế giúp bảo toàn giá trị lâu dài
+│
+├─ 7) Từ trí lực đến nhận diện bẫy tư duy
+│  ├─ Nhận diện sai lệch nhận thức
+│  └─ Rèn luyện tư duy rõ ràng, thận trọng
+│
+└─ 8) Kết luận
+   └─ Điều kiện nền không đủ → giá trị dễ bị bóp méo
+				</pre>
+			</details>
+		</div>
 	</section>
 </article>
 <script src="settings.js"></script>
