--- a/pages/writing-opinion/values-creation/5-health-and-clarity-of-mind.html
+++ b/pages/writing-opinion/values-creation/5-health-and-clarity-of-mind.html
@@ -90,6 +90,65 @@
 
 				<p>In the end, the problem is not that people lack value or goodwill, but that they often overestimate their intent and underestimate the conditions needed to live fully with that intent. When the body is not strong enough and the mind not clear enough, value—even when rightly chosen—can be distorted in the very process of being created.</p>
 			</div>
+
+			<!-- Outline summary notes -->
+			<div class="sub-section">
+				<h3 class="sub-point-1">Outline summary notes</h3>
+				<ul>
+					<li>Endurance comes from balancing pressure and recovery, like a properly tempered steel bar.</li>
+					<li>Health and clarity are foundational conditions that allow intention to be sustained.</li>
+					<li>Continuity of action requires a minimal physical base.</li>
+					<li>The Middle Way lesson: health is the quiet foundation of clarity.</li>
+					<li>Intellect keeps action on track and clarifies right vs wrong, value vs non-value.</li>
+					<li>Intellect also means not acting when action creates no value (Lincoln example).</li>
+					<li>Recognizing cognitive traps helps train clearer and more cautious thinking before action.</li>
+					<li>When foundations are insufficient, value is easily distorted even with good intent.</li>
+				</ul>
+			</div>
+
+			<!-- Text Mind Map Tree -->
+			<div class="sub-section">
+				<details class="mm-text-tree-details">
+					<summary class="sub-point-1">Text mind map (tree)</summary>
+					<pre class="mm-text-tree">
+5. HEALTH AND CLARITY OF MIND
+├─ Central claim
+│  └─ Physical and mental foundations determine sustainable value creation
+│
+├─ 1) Endurance = balance between pressure and recovery
+│  ├─ Steel bar metaphor: overload → deformation/break
+│  └─ Proper tempering → long-term durability
+│
+├─ 2) Health and clarity as foundational conditions
+│  ├─ Not direct value, but capacity to sustain intent
+│  └─ Need strength and alertness to act rightly over time
+│
+├─ 3) Continuity of action requires a physical base
+│  ├─ “Must run” every morning → needs a strong body
+│  └─ Without a physical base, discipline is fragile
+│
+├─ 4) Middle Way lesson
+│  ├─ Extreme asceticism → weakness, loss of clarity
+│  ├─ Nourishment restores clarity → Middle Way insight
+│  └─ Health is a quiet foundation for awakening
+│
+├─ 5) Intellect keeps action on track
+│  ├─ Distinguish right/wrong, value/non-value
+│  └─ Clarity enables responsible decisions
+│
+├─ 6) Intellect = ability not to act when needed
+│  ├─ Lincoln withheld criticism
+│  └─ Restraint preserves long-term value
+│
+├─ 7) From intellect to recognizing cognitive traps
+│  ├─ Identify distortions in perception
+│  └─ Train clearer, more cautious thinking
+│
+└─ 8) Conclusion
+   └─ Weak foundations distort value even with good intent
+					</pre>
+				</details>
+			</div>
 		</section>
 	</article>
 
